--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <h2>Current Time</h2>
             <div class="city-name">Sydney, Australia</div>
             <div id="currentClock" class="current-clock">--:--:--</div>
+            <div id="activeTotalTimeText" class="active-project-display-name"></div>
             <div id="activeTotalTime" class="active-project-display"></div>
             <!-- <div class="timezone-info">AEDT (UTC+11)</div> -->
         </div>
